Dont show the reload interstitial when muting a website

Bug: 776318
Change-Id: I00307ea4f9cf44c71f21a1311e35b5b6a9ea167d
Reviewed-on: https://chromium-review.googlesource.com/731268
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Lucas Garron <lgarron@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513281}
Former-commit-id: 97ee2f8beaac4cf737bc93f56b0c23cd9bce7c15